gitops/espresso/infrastructure/configs/cilium/allow-ingress-from-cluster.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-ingress-from-cluster
spec:
  endpointSelector:
    matchExpressions:
      - key: reserved:ingress
        operator: Exists
  ingress:
    - fromEntities:
        - cluster
        - host
        - world
