gitops/espresso/infrastructure/configs/cilium/allow-to-ingress.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-to-ingress
spec:
  endpointSelector: {}
  egress:
    - toEntities:
        - ingress
