gitops/espresso/infrastructure/configs/cilium/gateway-traffic.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: gateway-ingress-traffic
spec:
  endpointSelector:
    matchExpressions:
      - key: reserved:ingress
        operator: Exists
  ingress:
    - fromEntities:
        - cluster
        - host
        - world
  egress:
    - toEntities:
        - cluster
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: gateway-client-egress
spec:
  endpointSelector:
    matchExpressions:
      - key: k8s:io.kubernetes.pod.namespace
        operator: Exists
  egress:
    - toEntities:
        - ingress
