gitops/espresso/infrastructure/configs/cilium/host-firewall.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: host-firewall
spec:
  nodeSelector:
    matchLabels: {}
  ingress:
    - fromEntities:
        - cluster
        - remote-node
        - health
    - fromCIDR:
        - 10.0.187.1/32
        - fd7a:115c:a1e0:187::1/128
      toPorts:
        - ports:
            - port: "22"
              protocol: TCP
            - port: "6443"
              protocol: TCP
    - fromCIDR:
        - 10.0.186.0/24
        - fd7a:115c:a1e0:186::/64
        - 10.0.187.0/24
        - fd7a:115c:a1e0:187::/64
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
            - port: "443"
              protocol: TCP
    - icmps:
        - fields:
            - type: EchoRequest
              family: IPv4
            - type: EchoRequest
              family: IPv6
